- update email address

--- a/README
+++ b/README
@@ -52,7 +52,6 @@ following sources:
 
 Contact
 -------
-My e-mail address is Dinko Korunic <kreator@srce.hr>. I usually respond
-e-mails within a couple of hours, perhaps one day. If necessary, use PGP
-key 0xEA160D0B, with fingerprint 48BF A3C2 6FB9 14EC B05C  A683 6D3B AED1
-EA16 0D0B.
+My e-mail address is Dinko Korunic <dinko.korunic@gmail.com>.
+If necessary, use PGP key 0xEA160D0B with the following fingerprint:
+48BF A3C2 6FB9 14EC B05C  A683 6D3B AED1 EA16 0D0B
