--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -4,4 +4,4 @@ RELEASE 1.1.5 - Mon, 17 Sep 2007 21:20:10 +0200
     after final verification
   * bunch of smaller fixes
 
-  -- Dinko Korunic <kreator@srce.hr>
+  -- Dinko Korunic <dinko.korunic@gmail.com>
